
syntax ="proto3";

option go_package = "./;pb";

import "ordermsg.proto";

service OrderService {
    rpc PlaceOrder(OrderRequest) returns (OrderResponse){}
}

